        * add: libretro-px68k (Sharp X68000)
        * add: libretro-mame2003-plus
        * retroachievements: update (Master System, Atari Lynx, Atari 2600, VirtualBoy, NeoGeo Pocket and NeoGeo)
	* es: add a clock (and an option to remove it ; not visible on rpi when not connected to the network)
	* es: add an input checker to know how many pads are plugs and which joystick is which player

2018/05/01 - batocera.linux 5.15 - release
        * rpi3+ support
        * Atari 5200
        * theme update (light version)
        * some emulators updated
        * gamecube: set automatically 16/9 ratio if appropriated (or forced)
        * the update message now contains the old and new version before upgrading
        * change the default keyboard keys in es
        * nas: you can now mount roms and bios via wifi at startup
        * fix ssh on external storage
        * some minor fixes

2018/03/08 - batocera.linux 5.14 - release
        * rpi: new splash video
        * rpi: mutable splash video (add splashsound=off in /boot/recalbox-boot.conf to disable the sound)
        * rpi: customizable splash video (put a video in /boot/splash.mp4)
        * link update MameDB and Screenscraper
        * configgen: partially rewritten / more robust
        * decoration (bezel): available for different resolutions
        * mupen64: add osd message when available on the architecture
        * s905/c2 : add mame 2010
        * new emulator for intellivision
        * most of emulators updated
        * reicast: you can choose 16/9 in advanced options. not set automatically, because it's buggy in some cases
        * wii: automatically set 16/9 by default if your resolution is 16/9 or higher (or if set to auto or 16/9 in advanced options)

2018/02/02 - batocera.linux 5.13 - release
        * fix the bluetooth bug

2018/01/22 - batocera.linux 5.12 - release
        * buildroot upgrade to 2017/12
        * kodi 17.6
        * joystick battery information (information menu)