@@ -3,6 +3,7 @@
 # PX68K
 #
 ################################################################################
+# Version.: Commits on Apr 9, 2018
 LIBRETRO_PX68K_VERSION = f69e15f58bbd15447422978db12aec0ffdb7e4d9
 LIBRETRO_PX68K_SITE = $(call github,libretro,px68k-libretro,$(LIBRETRO_PX68K_VERSION))
 
