@@ -8,6 +8,8 @@
         * retroachievements: update (Master System, Atari Lynx, Atari 2600, VirtualBoy, NeoGeo Pocket and NeoGeo)
 	* es: add a clock (and an option to remove it ; not visible on rpi when not connected to the network)
 	* es: add an input checker to know how many pads are plugs and which joystick is which player
+        * update: libretro-cores leveling with Retroarch 1.7.3
+        * update: Dolphin Emulator
 
 2018/05/01 - batocera.linux 5.15 - release
         * rpi3+ support
